# pkgman

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  REVIEW.md  cli.py  commands.py  constants.py  database.py  managers.py  output.py  pkgman.py  pyproject.toml  run-app.sh  runner.py  scripts.py  sys_check.py  test-integration.sh  test.sh  tests.py  ui.py  uv_tools.py
.github/workflows/: ci.yml
tests/: conftest.py  test_cli.py  test_commands.py  test_database.py  test_known_managers.py  test_managers.py  test_uv_tools.py
