[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pkgman"
version = "2.0.1"
description = "Declarative layer over OS package managers. Replay your manually installed packages on fresh machines."
requires-python = ">=3.10"
authors = [{name = "Jose"}]
license = {text = "MIT"}

[project.scripts]
pkgman = "pkgman:main"

[tool.setuptools]
py-modules = ["pkgman", "commands", "database", "managers", "constants", "output"]

[dependency-groups]
dev = ["pytest"]